welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:4: error: value ! is not a member of Boolean
rep = (!aSmile & bSmile) || (aSmile  !bSmile)
                                     ^